boot, menu 캔버스 추

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -10,7 +10,8 @@
 <script src="lib/phaser.js"></script>
 <script src="js/Main.js"></script>
 <script src="assets/canvas/Level.js"></script>
-
+<script src="assets/canvas/Boot.js"></script>
+<script src="assets/canvas/Menu.js"></script>
 <style>
 /*
 	element.style 때문에 !important로 강제 적용
