코드 설명 추

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta charset="UTF-8" />
-<!-- <meta id=viewport content="width=960, initial-scale=1"> -->
+<meta id=viewport content="width=960, initial-scale=1">
 
 <title>Game1</title>
 
@@ -12,16 +12,17 @@
 <script src="assets/canvas/Level.js"></script>
 <script src="assets/canvas/Boot.js"></script>
 <script src="assets/canvas/Menu.js"></script>
+<script src="assets/canvas/Result.js"></script>
 <style>
 /*
 	element.style 때문에 !important로 강제 적용
 	inline style > internal style > external style > browser
 */
-canvas {
+/* canvas {
 	width: 960px !important;
 	height: 540px !important;
 	margin: 5% !important;
-}
+} */
 body {
 	/* width: 400px !important; */
 	background: black;
