var, let, const 에 대한 이해가 필요함

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -9,9 +9,10 @@
 
 <script src="lib/phaser.js"></script>
 <script src="js/Main.js"></script>
-<script src="assets/canvas/Level.js"></script>
 <script src="assets/canvas/Boot.js"></script>
 <script src="assets/canvas/Menu.js"></script>
+<script src="assets/canvas/Rules.js"></script>
+<script src="assets/canvas/Level.js"></script>
 <script src="assets/canvas/Result.js"></script>
 <style>
 /*
